--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,27 @@
 
   <html>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
       <head>
         <title> Ejemplo de Node.js </title>
         <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
      <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Chelsea+Market">
      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/0/normalize.min.css">
      <link rel="stylesheet" href="style/estilo.css">
       </head>
       <body>
+  <div class="w3-row-padding">
         <h1>NodeJS + Express</h1>
-        <h2>Process.argv</a><br>
-         <h3>Process:
-             Es un objeto<br>
-             argv:
-             Es un vector de argumentos
-        </h3>
+        <h2> app.js</h2>
+         <h3><br>
+          <code> var express = require('express')</code><br>
+           <code>var app = express()</code><br>
+          <code> app.get('/', function(req, res){</code><br>
+          <code> res.end('Hello World!')})</code><br>
+
+          <code> app.listen(3000)</code>
+         </h3>
       </body>
+</div>
  </html>
