edit two div principales

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,22 @@
      <link rel="stylesheet" href="style/estilo.css">
       </head>
       <body>
-  <div class="w3-row-padding">
+<a name="setup"></a>
+        <div class="scrollblock block-setup">
+             <h2>configuración</h2>
+             <p>
+                 <a href="http://code.google.com/p/git-osx-installer/downloads/list?can=3">Descarga git para OSX</a>
+             </p>
+             <p>
+                 <a href="http://msysgit.github.io/">Descarga git para Windows</a>
+             </p>
+             <p>
+                 <a href="http://book.git-scm.com/2_installing_git.html">Descarga git para Linux</a>
+             </p>
+         </div>
+<a name="create"></a>
+
+   <div class="scrollblock block-create">
         <h1>NodeJS + Express</h1>
         <h2> app.js</h2>
          <h3><br>
@@ -25,4 +40,7 @@
          </h3>
       </body>
 </div>
+
+
+
  </html>
